# StarTV-Slopautomation

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
premiere/: starnews_export.jsx
prompts/: gemini_script.txt
starnews/: __init__.py  __main__.py  cli.py  config.py  pipeline.py  rotation.py
starnews/steps/: __init__.py  generate_avatar.py  generate_script.py  generate_voice.py  prepare_folder.py  scrape_gala.py
starnews/web/: app.py
starnews/web/templates/: index.html
