[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "starnews-pipeline"
version = "0.1.0"
description = "Daily StarNews production pipeline for Gala.de articles"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "trafilatura>=1.12",
    "python-docx>=1.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "google-genai>=1.0",
    "flask>=3.0",
]

[project.scripts]
starnews = "starnews.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["starnews*"]

[tool.setuptools.package-data]
starnews = ["web/templates/*.html"]
